added bootstrap navbar and sub nav as per mock-up

--- a/assets/styles/scss/_custom.scss
+++ b/assets/styles/scss/_custom.scss
@@ -1,4 +1,6 @@
-h1 {
-	text-transform: uppercase;
-	font-weight: bold;
+.sub-header {
+	min-height: 44px;
+	width: 100%;
+	display: block;
+	background: #c43f57;
 }
