added hero section

--- a/assets/styles/scss/_custom.scss
+++ b/assets/styles/scss/_custom.scss
@@ -1,9 +1,15 @@
+a {
+	outline: none;
+}
 .sub-header {
 	min-height: 44px;
 	width: 100%;
 	display: block;
 	background: #c43f57;
 }
-a {
-	outline: none;
+.home-hero {
+	width: 100%;
+	min-height: 600px;
+	display: block;
+	background: #ccc;
 }
