--- a/assets/styles/scss/_custom.scss
+++ b/assets/styles/scss/_custom.scss
@@ -1,5 +1,11 @@
+h1, h2, h3, h4, h5, h6 {
+	color: #170404;
+}
 a {
 	outline: none;
+}
+p {
+	color: #170404;
 }
 .sub-header {
 	min-height: 44px;
@@ -12,4 +18,27 @@ a {
 	min-height: 600px;
 	display: block;
 	background: #ccc;
+	background-image: url('../../../../uploads/2020/03/person-on-rocks.jpg');
+	background-repeat: no-repeat;
+	background-size: cover;
+	background-position: 50% 50%;
 }
+.home-main {
+	width: 100%;
+	min-height: 620px;
+	display: block;
+	background: #e9e9e9;
+
+}
+// Custom Buttons
+.btn-outline-red1 {
+  color: #840421;
+  border-color: #e9e9e9;
+  transition: 0.3s ease-in-out;
+
+  &:hover {
+    color: #e9e9e9;
+    background-color: #c43f57;
+  }
+}
+//
