--- a/assets/styles/scss/_custom.scss
+++ b/assets/styles/scss/_custom.scss
@@ -12,15 +12,26 @@ p {
 	letter-spacing: 0.05em;
 	font-weight: 500;
 }
+.tertiary-heading {
+	color: #fff;
+	letter-spacing: 0.05em;
+	font-weight: 500;
+}
 .sub-header {
 	min-height: 44px;
 	width: 100%;
 	display: block;
 	background: #c43f57;
 }
+.affiliates {
+	min-height: 200px;
+	width: 100%;
+	display: block;
+	background: #e9e9e9;
+}
 .home-hero {
 	width: 100%;
-	min-height: 600px;
+	min-height: 588px;
 	display: block;
 	background: #ccc;
 	background-image: url('../../../../uploads/2020/03/person-on-rocks.jpg');
@@ -34,9 +45,34 @@ p {
 	display: block;
 	background: #e9e9e9;
 }
+.news-area {
+	width: 100%;
+	min-height: 420px;
+	display: block;
+	background: #e9e9e9;
+}
+.home-content-1 {
+  width: 100%;
+  min-height: 500px;
+  display: block;
+  background: #840421;
+}
+
+@media (min-width: 768px) {
+  .home-content-1 {
+    width: 100%;
+    min-height: 500px;
+    display: block;
+    background: #840421;
+    background-image: url('../../../../uploads/2020/04/isolated.png');
+    background-repeat: no-repeat;
+    background-size: contain;
+    background-position: right;
+  }
+}
 // Custom Buttons
 .btn-outline-red1 {
-  color: #bf0531;
+  color: #e9e9e9;
   border-color: #e9e9e9;
   transition: 0.3s ease-in-out;
 
