--- a/assets/styles/scss/_custom.scss
+++ b/assets/styles/scss/_custom.scss
@@ -49,7 +49,8 @@ p {
 	width: 100%;
 	min-height: 420px;
 	display: block;
-	background: #e9e9e9;
+	background: #fff;
+	border-top: 3px solid #840421;
 }
 .home-content-1 {
   width: 100%;
@@ -69,6 +70,14 @@ p {
     background-size: contain;
     background-position: right;
   }
+}
+.ha-footer {
+	color: #fff;
+	background: #c43f57;
+	min-height: 250px;
+	width: 100%;
+	display: block;
+	border-top: 4px solid #840421;
 }
 // Custom Buttons
 .btn-outline-red1 {
