--- a/assets/styles/scss/_custom.scss
+++ b/assets/styles/scss/_custom.scss
@@ -45,6 +45,17 @@ p {
 	display: block;
 	background: #e9e9e9;
 }
+.page-header {
+	width: 100%;
+	min-height: 150px;
+	background: #840421;
+	display: block;
+}
+.mainbody {
+	background: #fff;
+	display: block;
+	min-height: 1000px;
+}
 .news-area {
 	width: 100%;
 	min-height: 420px;
@@ -57,27 +68,32 @@ p {
   min-height: 500px;
   display: block;
   background: #840421;
-}
-
-@media (min-width: 768px) {
-  .home-content-1 {
-    width: 100%;
-    min-height: 500px;
-    display: block;
-    background: #840421;
-    background-image: url('../../../../uploads/2020/04/isolated.png');
+  @include breakpoint (sm) {
+  	background-image: url('../../../../uploads/2020/04/isolated.png');
     background-repeat: no-repeat;
     background-size: contain;
     background-position: right;
   }
 }
+.int-body {
+	width: 100%;
+	min-height: 1000px;
+	display: block;
+	background: #e9e9e9;
+}
 .ha-footer {
 	color: #fff;
 	background: #c43f57;
-	min-height: 250px;
+	min-height: 200px;
 	width: 100%;
 	display: block;
 	border-top: 4px solid #840421;
+}
+.footer-links ul, 
+.footer-links li {
+	margin: 0; 
+	padding: 0;
+	margin-left: 8px;
 }
 // Custom Buttons
 .btn-outline-red1 {
