changed button sizes on tablet, cleaned up code

--- a/assets/styles/scss/_custom.scss
+++ b/assets/styles/scss/_custom.scss
@@ -71,7 +71,7 @@ p {
 	background: #fff;
 	border-top: 3px solid #840421;
 }
-.home-content-1 {
+.home-mission {
   width: 100%;
   min-height: 500px;
   display: block;
