updated from server

--- a/assets/styles/scss/_custom.scss
+++ b/assets/styles/scss/_custom.scss
@@ -42,7 +42,7 @@ p {
 	min-height: 588px;
 	display: block;
 	background: #ccc;
-	background-image: url('../../../../uploads/2020/03/person-on-rocks.jpg');
+	//background-image: url('../../../../uploads/2020/03/person-on-rocks.jpg');
 	background-repeat: no-repeat;
 	background-size: cover;
 	background-position: 50% 50%;
